--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,18 @@
   "env": {},
   "globals": {},
   "rules": {
+    "radix": 0,
+    "strict": 0,
+    "complexity": 0,
+    "max-params": 0,
+    "spaced-comment": 0,
+    "prefer-object-spread": 0,
+    "no-useless-concat": 0,
+    "no-duplicate-imports": 0,
+    "prefer-regex-literals": 0,
+    "@typescript-eslint/no-invalid-this": 0,
+    "default-case-last": 0,
+    "no-useless-backreference": 0,
     "@typescript-eslint/no-require-imports": 0,
     "@typescript-eslint/prefer-optional-chain": 0,
     "@typescript-eslint/consistent-type-definitions": 0,
